--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,74 @@ body {
   color: #333;
 }
 
+h1, h3 {
+  text-align: center;
+}
+
+ul, form {
+  /*width: 100%;*/
+  /*padding-left: 20px;*/
+  margin: 0;
+  padding: 1em;
+}
 ul {
-  padding-left: 20px;
+  list-style-type: none;
+
+}
+
+ul li {
+  /*background-color: #d7d7d7;*/
+  /*color: #fff;*/
+  border-top: 1px solid #d7d7d7;
+  /*margin-top: 1em;*/
+  padding-top: 2em;
+  /*padding: 1.5em 0 0 0;*/
+  list-style-type: none;
+}
+
+ul li div {
+  /*background-color: #fff;*/
+  background-color: #d7d7d7;
+  color: #fff;
+  font-size: 0.85em;
+  font-weight: lighter;
+  /*color: #333;*/
+  margin-top: 0.5em;
+  padding: 0.5em;
+  /*padding-left: 1.5em;*/
+  /*padding: 0.5em 0.25em;*/
 }
 
 ul li span {
+  float: right;
+  /*background-color: #999;*/
+  /*color: #fff;*/
   color: #999;
   margin-right: 10px;
+}
+
+ul li button {
+  float: right;
+}
+
+form {
+}
+
+input {
+  float: left;
+  width: 100%;
+  max-width: calc(100% - 150px);
+  padding: 0.5em;
+}
+
+input[type="submit"] {
+  width: 20%;
+  max-width: 150px;
+  float: right;
+  background-color: rgb(132, 161, 244);
+  text-transform: uppercase;
+}
+
+input[type="submit"]:disabled {
+  background-color: #d7d7d7;
 }
